fix(page-profile): torna o scrollbar do painel de receitas invisivel caso o numero de receitas seja menor que seis

--- a/front/src/components/ProfilePage/PageProfile.css
+++ b/front/src/components/ProfilePage/PageProfile.css
@@ -180,16 +180,28 @@ a {
 .header__wrapper .cols__container .right__col .photos {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(190px, 1fr));
-  gap: 20px;
+  gap: 10px;
   padding: 5px;
 }
-.header__wrapper .cols__container .right__col .photos img {
+
+
+.header__wrapper .cols__container .right__col .photos .img {
+  width: 100%;
+  height: 150px; 
+  overflow: hidden;
+  position: relative;
+}
+
+
+.header__wrapper .cols__container .right__col .photos .img img{
+  width: 100%;
+  height: 100%;
   max-width: 100%;
   display: block;
   height: 100%;
   object-fit: cover;
 }
-.header__wrapper .cols__container .right__col .photos img:hover {
+.header__wrapper .cols__container .right__col .photos .img img:hover {
 
     filter: brightness(90%); 
   opacity: 0.85;   
